# cslider

./: BezierApproximator.cpp  BezierApproximator.h  CMakeLists.txt  CatmullApproximator.cpp  CatmullApproximator.h  PerfectApproximator.cpp  PerfectApproximator.h  Vector2.cpp  Vector2.h  ccurves.cpp  curves.cpp  curves.h
